# LearnOpenGL

./: CMakeLists.txt
include/glad/: glad.h
shader/: 4.1.texture.fs  4.1.texture.vs
src/: glad.c  main.cpp
